Added cache reading/writing with tests